Doc: add missing --add-opens flags.
PiperOrigin-RevId: 505191291
Change-Id: I2064dc6d88d80dfae081041897170889fc37540e