@@ -111,6 +111,8 @@ In the appengine-web.xml, modify the entrypoint to use the bundled runtime jars 
   java
   --add-opens java.base/java.lang=ALL-UNNAMED
   --add-opens java.base/java.nio.charset=ALL-UNNAMED
+  --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+  --add-opens java.logging/java.util.logging=ALL-UNNAMED
   -showversion -XX:+PrintCommandLineFlags
   -Djava.class.path=runtime-main.jar
   -Dclasspath.runtimebase=.:
